--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media(prefers-color-scheme: light){
+﻿@media(prefers-color-scheme: light){
   body{
     background-color: rgb(245, 245, 245);
     color: black;
@@ -121,6 +121,7 @@ body {
   width: 100%;
   height: 760px;
   background-size: cover;
+  background-position: center center;
 }
 
 #logo_img {
