--- a/styles/winui-web.css
+++ b/styles/winui-web.css
@@ -1,9 +1,9 @@
-@import url('http://fonts.cdnfonts.com/css/segoe-ui-4');
+﻿@import url('http://fonts.cdnfonts.com/css/segoe-ui-4');
 
 @media(prefers-color-scheme: light){
   :root {
-    --theme-primary-color: #1284FF;
-    --theme-primary-color-focus: #00A4FF;
+    --theme-primary-color: #005FB8;
+    --theme-primary-color-focus: rgb(38, 121, 199);
     --white: #ffffffff;
     --black: #000000ff;
     --neutral-light-color: rgb(220, 220, 220);
@@ -13,9 +13,15 @@
     color: black;
   }
   
+  .ms-textblock{
+    color: black;
+  }
+
   .ms-textbox{
     background-color: white;
-    border: 0.9px solid rgba(0, 0, 0, 0.1);
+    border-width: 0px 0px 1px 0px;
+    border-color: rgba(0, 0, 0, 0.6);
+    border-style: solid;
   }
   
   .ms-textbox:focus-within{
@@ -23,48 +29,101 @@
   }
   
   button{
-    background: #FFFFFF;
-    color: black;
+      color: black;
+  }
+
+  .ms-button{
+    width: 120px;
+    height: 32px;
+    background: white;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 0px 0px 1px 0px;
+    border-color: rgba(0, 0, 0, 0.3);
+    color: rgb(0, 0, 0, 0.8);
+    font-family: Segoe UI, sans-serif;
+  }
+
+  .ms-button:hover{
+      color: rgba(0, 0, 0, 0.6);
+      background-color: rgb(248, 248, 248);
+      border: none;
   }
   
   .ms-menu-button-selected{
-    background: #FFFFFF;
+    background: rgba(102, 102, 102, 0.096);
   }
   
   .ms-menu-button-selected:hover{
-    background: rgb(245, 245, 245);
-  }
+    background: rgba(102, 102, 102, 0.2);
+    box-shadow: 0 0 0 black;
+  } 
+
+  .ms-menu-button-selected:active{
+    background: rgba(102, 102, 102, 0.3);
+    box-shadow: 0 0 0 black;
+  } 
   
   .ms-menu-button:hover{
-    background-color: white;
+    background: rgba(102, 102, 102, 0.1);
+    box-shadow: 0 0 0 black;
   }
   
   .ms-menu-button:active{
-    background-color: rgb(245, 245, 245);
+    background: rgba(102, 102, 102, 0.3);
+    box-shadow: 0 0 0 black;
+    border: 0.1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .ms-acrylic-brush{
+      background-color: rgba(255, 255, 255, 0.5);
   }
 }
 
 @media(prefers-color-scheme: dark){
   :root {
-    --theme-primary-color: #1284FF;
-    --theme-primary-color-focus: #00A4FF;
+    --theme-primary-color: #005FB8;
+    --theme-primary-color-focus: rgb(44, 121, 194);
     --white: #ffffffff;
     --black: #000000ff;
     --neutral-light-color: rgb(45, 45, 45);
   }
-  
+
   button{
-    background-color: rgb(26, 26, 26);
-    color: white;
+      color: white;
+  }
+  
+  .ms-button{
+    width: 120px;
+    height: 32px;
+    background: rgb(25, 25, 25);
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 0px 0px 1px 0px;
+    border-color: rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.9);
+    font-family: Segoe UI, sans-serif;
+  }
+
+  .ms-button:hover{
+      color: rgba(255, 255, 255, 0.7);
+      background-color: rgb(35, 35, 35);
+      border: none;
   }
   
   input{
     color: white;
   }
+
+  .ms-textblock{
+    color: white;
+  }
   
   .ms-textbox{
     background-color: rgb(25, 25, 25);
-    border: 0.9px solid rgba(180, 180, 180, 0.1);
+    border-width: 0px 0px 1px 0px;
+    border-color: rgba(255, 255, 255, 0.5);
+    border-style: solid;
   }
   
   .ms-textbox:focus-within{
@@ -85,6 +144,10 @@
   
   .ms-menu-button:active{
     background-color: rgb(15, 15, 15);
+  }
+
+  .ms-acrylic-brush{
+      background-color: rgba(0, 0, 0, 0.5);
   }
 }
 
@@ -100,6 +163,20 @@
       background-color: transparent;
       justify-content: center;
       text-align: left;
+    }
+
+    .ms-grid{
+        display: grid;
+    }
+
+    .ms-acrylic-brush{
+        -webkit-backdrop-filter: blur(50px);
+        backdrop-filter: blur(50px);
+    }
+
+    .ms-textblock{
+      font-family: 'Segoe UI', sans-serif;
+      font-size: 16px;
     }
     
     .ms-text-input {
@@ -120,7 +197,7 @@
     }
     
     .ms-textbox:focus-within{
-      border: 2px solid var(--theme-primary-color);
+      border-color: var(--theme-primary-color);
     }
     
     .ms-textbox-icon {
@@ -133,36 +210,42 @@
     }
 
     .ms-button-accent{
+        /* display: flex; */
+        /* flex-direction: column; */
+        /* justify-content: center; */
+        /* align-items: center; */
+        /* padding: 5px 12px 7px; */
+        /* position: absolute; */
+        width: 120px;
+        height: 32px;
+        /* left: calc(50% - 120px/2); */
+        /* top: calc(50% - 32px/2); */
+
+        /* Light/Fill Color/Accent/Default */
         background: var(--theme-primary-color);
-        border: none;
-        box-sizing: border-box;
-        box-shadow: 0px 1.2px 1px rgba(0, 0, 0, 0.35);
-        border-radius: 6px;
+        border-radius: 4px;
+        border: solid;
+        border-width: 0px 0px 1px 0px;
+        border-color: rgba(0, 0, 0, 0.3);
         color: white;
+        font-family: Segoe UI, sans-serif;
     }
 
     .ms-button-accent:hover{
-        background: var(--theme-primary-color-focus);
-        border: none;
-        box-sizing: border-box;
-        box-shadow: 0px 1.2px 1px rgba(0, 0, 0, 0.40);
-        border-radius: 6px;
-        color: white;
+        background-color: var(--theme-primary-color-focus);
+        color: rgba(255, 255, 255, 0.7);
     }
 
     .ms-button-accent:active{
-        background: var(--theme-primary-color-focus);
+        background-color: var(--theme-primary-color-focus);
+        color: rgba(255, 255, 255, 0.6);
         border: none;
-        box-sizing: border-box;
-        box-shadow: 0px 1.2px 8px rgba(0, 0, 0, 0.45);
-        border-radius: 6px;
-        color: white;
     }
 
     .ms-menu-button-selected{
         border: 0.1px solid rgba(0, 0, 0, 0.1);
         box-sizing: border-box;
-        box-shadow: 0px 1.2px 1px rgba(0, 0, 0, 0.35);
+        box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.35);
         border-radius: 6px;
         height: 36px;
         width: auto; 
@@ -186,11 +269,10 @@
     }
 
     .ms-menu-button:active{
-        border-style: none;
-        border-radius: 6px;
+        border: 0.1px solid rgba(0, 0, 0, 0.1);
         height: 36px;
         width: auto; 
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.40);
+        box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.40);
     }
 
     .ms-menu{
@@ -249,7 +331,6 @@
         font-family: 'Segoe UI', sans-serif;
         font-size: 13px;
         position: relative;
-        top: 3px;
         margin-left: 6px;
     }
 
