--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,15 @@
-@media (prefers-color-scheme: light) {
+﻿@media (prefers-color-scheme: light) {
   body {
     background-color: rgb(224, 224, 224);
     color: rgb(20, 20, 20);
   }
   
+  i{
+    color: rgb(24, 24, 24);
+  }
+
   .ms-mica{
     background-color: rgba(255, 255, 255, 0.7);
-  }
-  
-  #search-box-ui {
-    position: absolute;
-    top: 20px;
-    right: 118px;
-    float: right;
-    width: 300px;
   }
   
   .app-icon{
@@ -22,6 +18,16 @@
     backdrop-filter: blur(45px);
     -webkit-backdrop-filter: blur(45px);
   }
+
+  #compact-home-button:active{
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.6);
+  }
+
+  #compact-review-button:active{
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.6);
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,24 +35,30 @@
     background-color: rgb(35, 35, 35);
     color: rgb(250, 250, 250);
   }
+
+  i{
+    color: rgb(250, 250, 250);
+  }
   
   .ms-mica {
     background-color: rgba(0, 0, 0, 0.7);
   }
   
-  #search-box-ui {
-    position: absolute;
-    top: 22px;
-    right: 94px;
-    float: right;
-    width: 300px;
-  }
-  
   .app-icon {
-    border: 0.3px solid rgba(20, 20, 20, 0.7);
-    background-color: rgba(35, 35, 35, 0.8);
+    border: 0.3px solid rgba(20, 20, 20, 0.6);
+    background-color: rgba(35, 35, 35, 0.9);
     backdrop-filter: blur(45px);
     -webkit-backdrop-filter: blur(45px);
+  }
+
+  #compact-home-button:active{
+    background-color: rgba(80, 80, 80, 0.3);
+    border: 1px solid rgba(120, 120, 120, 0.6);
+  }
+
+  #compact-review-button:active{
+    background-color: rgba(80, 80, 80, 0.3);
+    border: 1px solid rgba(120, 120, 120, 0.6);
   }
 }
 
@@ -100,22 +112,33 @@ header{
   width: 150px;
 }
 
-#search-box-ui{
+#search-box-ui {
   position: absolute;
-  top: 22px;
-  width: 300px;
+  top: 21px;
+  width: 230px;
+  right: 180px;
 }
 
 #search-icon{
   position: relative;
-  top: -7px;
-  right: 26px;
+  top: -29px;
+  right: 8px;
+  display: inline-block;
+  float: right;
 }
 
 #nav-menu{
   position: fixed;
   top: 22px;
   left: 150px;
+}
+
+#menu-more-ui{
+  height: 32px;
+  width: 40px;
+  position: relative;
+  top: -2px;
+  left: -13px;
 }
 
 #contentLayout{
@@ -144,15 +167,16 @@ iframe{
 /* home page styles */
 
 #getting-started{
-  width: 100%;
-  height: 660px;
-  background-color: rgb(80, 80, 80);
-  background-image: url('../assets/power-editor-background.jpg');
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  display: table;
-  text-align: center;
+    width: 100%;
+    height: auto;
+    background-color: rgb(80, 80, 80);
+    background-image: url(../assets/power-editor-background.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: table;
+    text-align: center;
+    padding-bottom: 345px;
 }
 
 #getting-started-div{
@@ -163,8 +187,8 @@ iframe{
   padding: 0px;
   color: rgb(50, 50, 50);
   top: 142px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 28px;
+  padding-right: 28px;
 }
 
 .app-icon{
@@ -182,7 +206,7 @@ iframe{
   position: relative;
   top: 50%;
   left: 50%;
-  transform: translate(-74%, -50%);
+  transform: translate(-76%, -50%);
 }
 
 #progress-ui{
@@ -192,4 +216,66 @@ iframe{
   transform: translate(-50%, -50%);
   visibility: collapse;
   z-index: 20;
+}
+
+#compact-menu-button{
+  height: 40px;
+  width: 36px;
+  position: fixed;
+  top: 14px;
+  left: 18px;
+  justify-content: center;
+}
+
+#ms-store-button{
+  height: 40px;
+  width: 36px;
+  position: fixed;
+  top: 14px;
+  right: 18px;
+  justify-content: center;
+}
+
+#compact-home-button{
+  height: 36px;
+  width: 36px;
+  position: fixed;
+  top: 15px;
+  left: 70px;
+  justify-content: center;
+  background-color: transparent;
+  border-radius: 5px;
+  border: none;
+}
+
+#compact-review-button{
+  height: 36px;
+  width: 36px;
+  position: fixed;
+  top: 15px;
+  right: 70px;
+  justify-content: center;
+  background-color: transparent;
+  border-radius: 5px;
+  border: none;
+}
+
+.ui-page-transition{
+  animation-name: page-transition;
+  animation-direction: normal;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-play-state: running;
+}
+
+@keyframes page-transition{
+  0%{
+    opacity: 0;
+    margin-top: -75px;
+  }
+
+  100%{
+    opacity: 1;
+    margin-top: 0px;
+  }
 }
