privacy policy update

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,57 @@
+﻿@media (prefers-color-scheme: light){
+  body{
+    background-color: rgb(224, 224, 224);
+    color: rgb(20, 20, 20);
+  }
+  
+  i{
+    color: rgb(24, 24, 24);
+  }
+
+  .ms-mica{
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+
+  .app-icon{
+    border: 0.3px solid rgba(200, 200, 200, 0.7);
+    background-color: rgba(246, 246, 246, 0.9);
+    backdrop-filter: blur(45px);
+    -webkit-backdrop-filter: blur(45px);
+  }
+
+  .footer-ui{
+    background-color: rgb(200, 200, 200);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+  }
+}
+
+@media (prefers-color-scheme: dark){
+  body {
+    background-color: rgb(35, 35, 35);
+    color: rgb(250, 250, 250);
+  }
+
+  i{
+    color: rgb(250, 250, 250);
+  }
+  
+  .ms-mica {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  
+  .app-icon {
+    border: 0.3px solid rgba(20, 20, 20, 0.6);
+    background-color: rgba(35, 35, 35, 0.9);
+    backdrop-filter: blur(45px);
+    -webkit-backdrop-filter: blur(45px);
+  }
+
+  .footer-ui{
+    background-color: rgb(52, 52, 52);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+}
+
 body{
   padding: 0px;
   margin: 0px;
@@ -26,6 +80,11 @@ p{
   font-size: 18px;
 }
 
+b{
+  font-family: 'Segoe UI', sans-serif;
+  font-size: 18px;
+}
+
 .document-section{
   padding-top: 80px;
   padding-left: 25px;
@@ -34,4 +93,24 @@ p{
 
 .document-content{
   width: 100%;
+}
+
+.footer-ui{
+  width: 100%;
+  height: 120px;
+  margin-top: 56px;
+  border-radius: 8px 8px 0px 0px;
+  text-align: center;
+  display: table;
+}
+
+.table{
+  display: table;
+  width: 100%;
+  text-align: center;
+}
+
+.table-item{
+  display: inline-block;
+  margin: 5px;
 }
