--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,4 +1,4 @@
-﻿@media (prefers-color-scheme: light){
+@media (prefers-color-scheme: light){
   body{
     background-color: rgb(224, 224, 224);
     color: rgb(20, 20, 20);
@@ -20,8 +20,8 @@
   }
 
   .footer-ui{
-    background-color: rgb(200, 200, 200);
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: rgb(246, 246, 246);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
   }
 }
 
@@ -87,8 +87,8 @@ b{
 
 .document-section{
   padding-top: 102px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .document-content{
@@ -97,7 +97,7 @@ b{
 
 .footer-ui{
   width: 100%;
-  height: 120px;
+  height: 150px;
   margin-top: 56px;
   border-radius: 8px 8px 0px 0px;
   text-align: center;
