--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,12 @@
     background-color: rgba(255, 255, 255, 0.2);
     border: 1px solid rgba(255, 255, 255, 0.6);
   }
+  
+  #navigation-view{
+    background-color: rgba(255, 255, 255, 0.8);
+    -webkit-backdrop-filter: blur(50px);
+    backdrop-filter: blur(50px);
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -59,6 +65,12 @@
   #compact-review-button:active{
     background-color: rgba(80, 80, 80, 0.3);
     border: 1px solid rgba(120, 120, 120, 0.6);
+  }
+  
+  #navigation-view {
+    background-color: rgba(0, 0, 0, 0.8);
+    -webkit-backdrop-filter: blur(50px);
+    backdrop-filter: blur(50px);
   }
 }
 
@@ -361,4 +373,19 @@ iframe{
 .ml11 .letter {
   display: inline-block;
   line-height: 1em;
-} 
+}
+
+#navigation-view{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  max-width: 300px;
+  width: 100%;
+  height: 100%;
+  text-align: left;
+  border-radius: 0px 6px 6px 6px;
+  display: block;
+  padding: 20px;
+  z-index: 1111111111111111111111;
+  visibility: collapse;
+}
