--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -129,4 +129,8 @@ b{
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  display: table;
+  align-content: center;
+  align-items: center;
+  text-align: left;
 }
