--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ iframe{
 
 #navigation-view-title{
   position: relative;
-  left: 8px;
+  left: 6px;
 }
 
 #navigation-view-search-input{
@@ -431,8 +431,8 @@ iframe{
 
 #navigation-view-search-box{
   padding-left: 5px;
-  padding-right: 12px;
-  margin-top: 16px;
+  padding-right: 8px;
+  margin-top: 12px;
 }
 
 #navigation-view-box{
@@ -451,6 +451,10 @@ iframe{
   height: 100%;
   background-color: transparent;
   display: block;
+}
+
+#navigation-view-items{
+  width: 100%;
 }
 
 .ui-command{
