--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,4 +1,4 @@
-﻿@media (prefers-color-scheme: light){
+@media (prefers-color-scheme: light){
   body{
     background-color: rgb(224, 224, 224);
     color: rgb(20, 20, 20);
@@ -105,7 +105,7 @@ b{
 
 .footer-ui{
   width: 100%;
-  height: 150px;
+  height: auto;
   margin-top: 56px;
   border-radius: 8px 8px 0px 0px;
   text-align: center;
