--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
-﻿@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
   body {
     background-color: rgb(224, 224, 224);
     color: rgb(20, 20, 20);
+  }
+  
+  footer {
+    background-color: rgb(246, 246, 246);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
   }
   
   i{
@@ -46,6 +51,11 @@
     background-color: rgb(35, 35, 35);
     color: rgb(250, 250, 250);
   }
+  
+  footer {
+    background-color: rgb(52, 52, 52);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+  }
 
   i{
     color: rgb(250, 250, 250);
@@ -89,6 +99,15 @@ body {
   margin: 0px;
   font-family: 'Segoe UI', sans-serif;
   height: 100%;
+}
+
+footer {
+  width: 100%;
+  height: auto;
+  margin-top: 56px;
+  border-radius: 8px 8px 0px 0px;
+  text-align: center;
+  display: table;
 }
 
 h1{
@@ -197,7 +216,7 @@ header{
 .table{
   display: table;
   text-align: center;
-  width: auto;
+  width: 100%;
 }
 
 iframe{
