--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -1,4 +1,17 @@
-﻿body{
+body{
   padding: 0px;
   margin: 0px;
+}
+
+#fluent-provider{
+  width: 100%;
+  height: auto;
+}
+
+.blogpost-header-image{
+  width: 100%;
+  height: 460px;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 0px 0px 8px 8px;
 }
