--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -1,6 +1,44 @@
+﻿@media (prefers-color-scheme: light) {
+    body {
+        background-color: rgb(246, 246, 246);
+        color: rgb(32, 32, 32);
+    }
+
+    .gradient-div {
+        background: rgb(246,246,246);
+        background: linear-gradient(0deg, rgba(246,246,246,1) 12%, rgba(255,255,255,0) 100%);
+    }
+
+    .fluent-badge {
+        background-color: rgba(255, 255, 255, 0.6);
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(32, 32, 32);
+        color: rgb(246, 246, 246);
+    }
+
+    .gradient-div {
+        background: rgb(32,32,32);
+        background: linear-gradient(0deg, rgb(32, 32, 32) 3%, rgba(255,255,255,0) 100%);
+    }
+
+    .fluent-badge {
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+}
+
+h1{
+    font-weight: lighter;
+    font-size: 42px;
+}
+
 body{
   padding: 0px;
   margin: 0px;
+  font-family: 'Segoe UI', sans-serif;
 }
 
 #fluent-provider{
@@ -8,10 +46,41 @@ body{
   height: auto;
 }
 
+#post-header-div{
+    text-align: center;
+    position: relative;
+    margin-left: 42px;
+    margin-right: 42px;
+    top: 300px;
+}
+
+#post-header-title{
+    position: relative;
+    top: -20px;
+}
+
 .blogpost-header-image{
   width: 100%;
   height: 460px;
   background-size: cover;
   background-position: center center;
+  background-repeat: no-repeat;
   border-radius: 0px 0px 8px 8px;
+}
+
+.gradient-div {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.fluent-badge{
+    padding: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 6px;
+    backdrop-filter: blur(60px);
+    -webkit-backdrop-filter: blur(60px);
+    position: inline-block;
 }
