--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -21,8 +21,11 @@
     }
 
     .gradient-div {
-        background: rgb(32,32,32);
-        background: linear-gradient(0deg, rgb(32, 32, 32) 3%, rgba(255,255,255,0) 100%);
+        background: rgb(35,35,35);
+        background: -moz-linear-gradient(0deg, rgba(32, 32, 32,1) 3%, rgba(255,255,255,0) 100%);
+        background: -webkit-linear-gradient(0deg, rgba(32, 32, 32, 1) 3%, rgba(255,255,255,0) 100%);
+        background: linear-gradient(0deg, rgba(32, 32, 32, 1) 3%, rgba(255,255,255,0) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#232323",endColorstr="#ffffff",GradientType=1);
     }
 
     .fluent-badge {
