--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -1,4 +1,4 @@
-﻿@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
     body {
         background-color: rgb(246, 246, 246);
         color: rgb(32, 32, 32);
@@ -42,6 +42,27 @@ body{
   padding: 0px;
   margin: 0px;
   font-family: 'Segoe UI', sans-serif;
+}
+
+p {
+  font-size: 20px;
+  font-weight: lighter;
+}
+
+.img-container{
+  padding-left: 32px;
+  padding-right: 32px;
+  text-align: center;
+  display: table;
+}
+
+.post-img{
+  display: inline-block;
+  border-radius: 5px;
+  max-width: 500px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #fluent-provider{
