--- a/blog/css/style-dark.css
+++ b/blog/css/style-dark.css
@@ -25,10 +25,9 @@ p {
 }
 
 .img-container {
-  padding-left: 32px;
-  padding-right: 32px;
-  text-align: center;
-  display: table;
+  margin-left: -32px;
+  text-align: left;
+  display: block;
 }
 
 .post-img {
