--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media (prefers-color-scheme: light) {
+﻿@media (prefers-color-scheme: light) {
   body {
     background-color: rgb(224, 224, 224);
     color: rgb(20, 20, 20);
@@ -15,6 +15,11 @@
 
   .ms-mica{
     background-color: rgba(255, 255, 255, 0.7);
+  }
+
+  .badge{
+    background-color: rgba(255, 255, 255, 0.9);
+    color: rgb(24, 24, 24);
   }
   
   .app-icon{
@@ -61,6 +66,11 @@
     color: rgb(250, 250, 250);
   }
   
+  .badge{
+    background-color: rgba(25, 25, 25, 0.9);
+    color: rgb(250, 250, 250);
+  }
+
   .ms-mica {
     background-color: rgba(0, 0, 0, 0.7);
   }
@@ -151,6 +161,16 @@ header{
   -webkit-backdrop-filter: blur(60px);
 }
 
+.badge{
+  padding: 8px;
+  border-radius: 5px;
+  backdrop-filter: blur(60px);
+  -webkit-backdrop-filter: blur(60px);
+  padding-left: 12px;
+  padding-right: 12px;
+  display: inline-block;
+}
+
 #app-nav-logo{
   position: relative;
   left: 18px;
@@ -238,7 +258,6 @@ iframe{
     background-size: cover;
     display: table;
     text-align: center;
-    padding-bottom: 345px;
 }
 
 #getting-started-div{
@@ -437,6 +456,18 @@ iframe{
   padding: 10px;
   z-index: 1111111111111111111111;
   visibility: collapse;
+}
+
+#screenshot-ui{
+  width: 100%;
+  height: 720px;
+  display: block;
+  background-image: url('../assets/LaptopScreenshot.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: relative;
+  top: 160px;
 }
 
 #navigation-view-title{
