--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-﻿@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
   body {
     background-color: rgb(224, 224, 224);
     color: rgb(20, 20, 20);
@@ -542,4 +542,13 @@ iframe{
     display: block;
     margin-left: 35px;
     margin-right: 35px;
+}
+
+.app-screen-ui{
+  display: block;
+  width: 100%;
+  height: 500px;
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
