--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media (prefers-color-scheme: light) {
+﻿@media (prefers-color-scheme: light) {
   body {
     background-color: rgb(224, 224, 224);
     color: rgb(20, 20, 20);
@@ -27,6 +27,11 @@
     background-color: rgba(246, 246, 246, 0.9);
     backdrop-filter: blur(45px);
     -webkit-backdrop-filter: blur(45px);
+  }
+
+  .card-ui{
+      background-color: rgb(250, 250, 250);
+      border: 1px solid #eaeaea;
   }
 
   #compact-home-button:active{
@@ -80,6 +85,11 @@
     background-color: rgba(35, 35, 35, 0.9);
     backdrop-filter: blur(45px);
     -webkit-backdrop-filter: blur(45px);
+  }
+
+  .card-ui{
+    background-color: rgb(25, 25, 25);
+    border: 1px solid rgb(20, 20, 20);
   }
 
   #compact-home-button:active{
@@ -552,4 +562,11 @@ iframe{
   background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
+}
+
+.card-ui{
+    display: block;
+    border-radius: 10px;
+    padding: 32px;
+    box-shadow: 0 6px 10px rgb(0 0 0 / 30%);
 }
